--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <p>Hello! I’m Dr. Siraj Muhammad – not the kind who saves your life, but I sure am the kind who blows your mind 😉 and I manipulate one fundamental force of the universe for a living 📡</p>
 
-<p>I earned my doctorate degree in Electrical and Computer Engineering from the <a href="https://www.ou.edu" target="_blank">University of Oklahoma</a> in 2021 – Boomer Sooners! I specialize in wireless coexistence analysis and mitigation, spectrum sharing, and channel access. I’m currently working as an RF Systems Engineer at  Apple in Cupertino, CA.</p>
+<p>I earned my doctorate degree in Electrical and Computer Engineering from the <a href="https://www.ou.edu" target="_blank">University of Oklahoma</a> in 2021 – Boomer Sooners! I specialize in wireless coexistence analysis and mitigation, spectrum sharing, and channel access. I’m currently working as a Wireless Systems Design Engineer at  Apple in Cupertino, CA.</p>
 
 <p>I enjoy poetry and have some of my own writings. I like playing ping-pong and analyzing my moves from a physics point of view. Speaking of physics, I’m in love with astronomy and astrophysics. I have high metabolism and I love good food and cooking!</p>
 
